daemon/src/dao/snapshots/kalatori__dao__payout__tests__paginated_payouts_failed_statuses.snap
---
source: daemon/src/dao/payout.rs
expression: result
---
- id: "[uuid]"
  invoice_id: "[uuid]"
  initiator_type: System
  initiator_id: ~
  status: Failed
  created_at: "[timestamp]"
  updated_at: "[timestamp]"
  chain: Polygon
  asset_id: "1984"
  asset_name: USDT
  amount: "42.00"
  source_address: "0x45f077823C8d036a1a9f7Cd28e86Bd98191dF2b7"
  destination_address: "0x0E3Ca7fD040144900AdaA5f9B8917f3933A4F5e9"
  destination_chain: Polygon
  destination_asset_id: "0x3c499c542cEF5E3811e1192ce70d8cC03d5c3359"
  retry_count: 5
  last_attempt_at: "[timestamp]"
  failure_message: Permanent failure
  fee: ~
- id: "[uuid]"
  invoice_id: "[uuid]"
  initiator_type: System
  initiator_id: ~
  status: FailedRetriable
  created_at: "[timestamp]"
  updated_at: "[timestamp]"
  chain: PolkadotAssetHub
  asset_id: USDC
  asset_name: USDC
  amount: "300.00"
  source_address: "0x45f077823C8d036a1a9f7Cd28e86Bd98191dF2b7"
  destination_address: "0x0E3Ca7fD040144900AdaA5f9B8917f3933A4F5e9"
  destination_chain: Polygon
  destination_asset_id: "0x3c499c542cEF5E3811e1192ce70d8cC03d5c3359"
  retry_count: 1
  last_attempt_at: "[timestamp]"
  next_retry_at: "[timestamp]"
  failure_message: Network error
  fee: ~
